<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="aceptarOK"
    tools:context=".datos">

    <ImageView
        android:id="@+id/imageViewC"
        android:layout_width="183dp"
        android:layout_height="178dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCamara"
        tools:srcCompat="@color/purple_500" />

    <TextView
        android:id="@+id/textViewM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/textMaterial"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextID" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/textDiam"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerM" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:text="Fecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="aceptarOK"
        android:text=" enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewC" />

    <Button
        android:id="@+id/buttonCamara"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnCamara"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerD" />

    <Spinner
        android:id="@+id/spinnerM"
        android:layout_width="341dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewM" />

    <TextView
        android:id="@+id/textViewF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="233dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/textID"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/editTobs"
        android:layout_width="172dp"
        android:layout_height="176dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/textObs"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageViewC"
        app:layout_constraintTop_toBottomOf="@+id/buttonCamara" />

    <Spinner
        android:id="@+id/spinnerD"
        android:layout_width="342dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="326dp"
            android:layout_height="37dp"
            android:text="@string/radioButtonAC"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="326dp"
            android:layout_height="36dp"
            android:text="@string/radioButtonAlc"
            android:textSize="16sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>